<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">My Adaptive Calendar</string>
    <string name="textview">Calendar View</string>
    <string name="add_destination">Add Destination</string>
    <string name="add_activity">Add Activity</string>
    <string name="settings">Settings</string>
    <string name="button">Button</string>
    <string name="apply">Apply</string>
    <string name="back">Back</string>
    <string name="current_selected_date">Current selected date</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="password_confirm">Password (confirm)</string>
    <string name="add_new_activity">Add new activity</string>
    <string name="add_new_destination">Add new destination</string>
    <string name="options">Options</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="start_time">Start time</string>
    <string name="stop_time">Stop time</string>
    <string name="description">Description</string>
    <string name="time">Time (in minutes)</string>
    <string name="all_day">All day</string>
    <string name="_8_00">8:00</string>
    <string name="_21_00">21:00</string>
    <string name="add_some_description">add some description</string>
    <string name="add_title">add title</string>
    <string name="add_date">add date</string>
    <string name="add_wanting_time">add wanting time</string>
    <string name="add_some_title">add some title</string>
    <string name="start_day">00:00</string>
    <string name="stop_day">23:59</string>
    <string name="i_start_working_at">I start working at</string>
    <string name="i_finish_working_at">I finish working at</string>
    <string name="i_go_to_sleep_at">I go to sleep at</string>
    <string name="put_new_hour">Put new hour</string>
    <string name="log_out">Log Out</string>
    <string name="delete" tools:ignore="ExtraTranslation">Delete activity</string>
</resources>