<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/new_destination"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddDestination">

    <TextView
        android:id="@+id/new_destinatil_panel"
        android:layout_width="286dp"
        android:layout_height="56dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="656dp"
        android:text="@string/add_destination"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/back_from_new_destination"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="28dp"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/apply_new_destination"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="28dp"
        android:text="@string/apply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/back_from_new_destination" />

    <TextView
        android:id="@+id/new_destination_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="208dp"
        android:text="@string/title"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/new_destination_title_input"
        app:layout_constraintEnd_toEndOf="@+id/new_destination_title_input" />

    <TextView
        android:id="@+id/new_destination_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="124dp"
        android:text="@string/time"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/New_destination_time_input"
        app:layout_constraintEnd_toEndOf="@+id/New_destination_time_input" />

    <TextView
        android:id="@+id/new_destination_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="160dp"
        android:text="@string/description"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/new_destination_description_input"
        app:layout_constraintEnd_toEndOf="@+id/new_destination_description_input" />

    <EditText
        android:id="@+id/new_destination_title_input"
        android:layout_width="228dp"
        android:layout_height="53dp"
        android:layout_marginBottom="44dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/New_destination_time_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.298"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/add_some_title"
        android:autofillHints="@string/add_some_title" />

    <EditText
        android:id="@+id/New_destination_time_input"
        android:layout_width="233dp"
        android:layout_height="54dp"
        android:layout_marginBottom="44dp"
        android:ems="10"
        android:hint="@string/add_wanting_time"
        android:inputType="time"
        app:layout_constraintBottom_toTopOf="@+id/new_destination_description_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.298"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints="@string/add_wanting_time" />

    <EditText
        android:id="@+id/new_destination_description_input"
        android:layout_width="219dp"
        android:layout_height="52dp"
        android:layout_marginBottom="36dp"
        android:ems="10"
        android:hint="@string/add_some_description"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/back_from_new_destination"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.298"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints="@string/add_some_description" />
</androidx.constraintlayout.widget.ConstraintLayout>