<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="add_activity"
            type="com.example.myapplication.AddActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="188dp"
            android:layout_height="30dp"
            android:layout_marginEnd="16dp"
            android:text="@string/add_new_activity"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.04" />

        <Button
            android:id="@+id/back_from_new_activity"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginStart="60dp"
            android:layout_marginBottom="16dp"
            android:text="@string/back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/apply_new_activity"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginEnd="65dp"
            android:layout_marginBottom="16dp"
            android:text="@string/apply"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.891"
            app:layout_constraintStart_toEndOf="@+id/back_from_new_activity" />

        <TextView
            android:id="@+id/new_activity_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="4dp"
            android:text="@string/title"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/new_activity_title_input"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/new_activity_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/date"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/new_activity_date_input"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/New_activity_start_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="48dp"
            android:text="@string/start_time"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/new_activity_stop_time"
            app:layout_constraintEnd_toStartOf="@+id/new_activity_start_time_input"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/new_activity_stop_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="56dp"
            android:text="@string/stop_time"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/new_activity_description"
            app:layout_constraintEnd_toStartOf="@+id/new_activity_stop_time_input" />

        <TextView
            android:id="@+id/new_activity_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/description"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/new_activity_description_input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.036"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/new_activity_start_time_input"
            android:layout_width="240dp"
            android:layout_height="64dp"
            android:layout_marginBottom="16dp"
            android:autofillHints="8:00"
            android:ems="10"
            android:hint="@string/_8_00"
            android:inputType="time"
            app:layout_constraintBottom_toTopOf="@+id/new_activity_stop_time_input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.584"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/new_activity_stop_time_input"
            android:layout_width="242dp"
            android:layout_height="62dp"
            android:layout_marginBottom="40dp"
            android:autofillHints="21:00"
            android:ems="10"
            android:hint="@string/_21_00"
            android:inputType="time"
            app:layout_constraintBottom_toTopOf="@+id/new_activity_description_input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.585"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/new_activity_date_input"
            android:layout_width="242dp"
            android:layout_height="55dp"
            android:layout_marginBottom="12dp"
            android:autofillHints="01.01.2023"
            android:ems="10"
            android:hint="@string/add_date"
            android:inputType="date"
            app:layout_constraintBottom_toTopOf="@+id/all_day_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.343"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/new_activity_description_input"
            android:layout_width="288dp"
            android:layout_height="87dp"
            android:layout_marginBottom="12dp"
            android:autofillHints="Description"
            android:ems="10"
            android:hint="@string/add_some_description"
            android:inputType="text"
            app:layout_constraintBottom_toTopOf="@+id/back_from_new_activity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.487"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/new_activity_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginBottom="40dp"
            android:text="@string/time"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/New_activity_start_time"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/all_day_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="12dp"
            android:text="@string/all_day"
            app:layout_constraintBottom_toTopOf="@+id/new_activity_start_time_input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.687"
            app:layout_constraintStart_toEndOf="@+id/new_activity_time" />

        <EditText
            android:id="@+id/new_activity_title_input"
            android:layout_width="249dp"
            android:layout_height="62dp"
            android:layout_marginBottom="28dp"
            android:autofillHints="My new activity"
            android:ems="10"
            android:hint="@string/add_title"
            android:inputType="text"
            app:layout_constraintBottom_toTopOf="@+id/new_activity_date_input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.358"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>