<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="-76dp">

    <EditText
        android:id="@+id/newfinishWorkInput"
        android:layout_width="148dp"
        android:layout_height="53dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="252dp"
        android:autofillHints="16:00"
        android:ems="10"
        android:inputType="time"
        app:layout_constraintStart_toEndOf="@+id/finishWork"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/newstartWorkInput"
        android:layout_width="148dp"
        android:layout_height="53dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="108dp"
        android:autofillHints="8:00"
        android:ems="10"
        android:inputType="time"
        app:layout_constraintStart_toEndOf="@+id/workStart"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/newstartWork"
        android:layout_width="179dp"
        android:layout_height="60dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="108dp"
        android:text="@string/put_new_hour"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/finishWorkInput"
        android:layout_width="148dp"
        android:layout_height="53dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="180dp"
        android:autofillHints="16:00"
        android:ems="10"
        android:inputType="time"
        app:layout_constraintStart_toEndOf="@+id/finishWork"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/sleepTimeInput"
        android:layout_width="148dp"
        android:layout_height="53dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="332dp"
        android:autofillHints="22:00"
        android:ems="10"
        android:inputType="time"
        app:layout_constraintStart_toEndOf="@+id/sleepTime"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/newSleepTimeInput"
        android:layout_width="148dp"
        android:layout_height="53dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="404dp"
        android:autofillHints="16:00"
        android:ems="10"
        android:inputType="time"
        app:layout_constraintStart_toEndOf="@+id/finishWork"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/sleepTime"
        android:layout_width="179dp"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="324dp"
        android:text="@string/i_go_to_sleep_at"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/newSleepTime"
        android:layout_width="179dp"
        android:layout_height="60dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="396dp"
        android:text="@string/put_new_hour"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/finishWork"
        android:layout_width="179dp"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="180dp"
        android:text="@string/i_finish_working_at"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/newfinishWork"
        android:layout_width="179dp"
        android:layout_height="60dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="252dp"
        android:text="@string/put_new_hour"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="116dp"
        android:layout_marginBottom="608dp"
        android:text="@string/settings"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/back_from_settings"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginStart="65dp"
        android:layout_marginBottom="55dp"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/apply_new_settings"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="55dp"
        android:text="@string/apply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/back_from_settings" />

    <TextView
        android:id="@+id/workStart"
        android:layout_width="179dp"
        android:layout_height="60dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="40dp"
        android:text="@string/i_start_working_at"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/startWorkInput"
        android:layout_width="148dp"
        android:layout_height="53dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="40dp"
        android:autofillHints="8:00"
        android:ems="10"
        android:inputType="time"
        app:layout_constraintStart_toEndOf="@+id/workStart"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

</androidx.constraintlayout.widget.ConstraintLayout>